--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,3 @@
 /.idea/
 .terraform/providers/registry.terraform.io/hashicorp/aws/2.70.0/windows_amd64/terraform-provider-aws_v2.70.0_x4.exe
+.idea/workspace.xml
